--- a/whatcha-gonna-write-about/src/App.css
+++ b/whatcha-gonna-write-about/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
+.main {
+  display: flex;
+  justify-content: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar {
+  background-color: rgb(133, 133, 133);
+  display: flex;
+  gap: 50px;
+  align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.random-generator-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: rgb(204, 235, 204);
+  padding: 20px;
+}
+
+.home {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  background-color: rgb(215, 215, 172);
+  height: 400px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content {
+  background-color: rgb(193, 193, 193);
 }
